fixed flexbox so it would work on IE11

--- a/style.css
+++ b/style.css
@@ -288,15 +288,11 @@ nav li:last-child {
 }
 
 .small {
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 calc(50% - 4px);
-  flex: 0 0 calc(50% - 4px);
+  width: calc(50% - 4px);
 }
 
 .large {
-  -webkit-box-flex: 2;
-  -ms-flex: 2 0 100%;
-  flex: 2 0 100%;
+  width: 100%;
 }
 
 .mens {
@@ -498,15 +494,11 @@ footer a {
   }
 
   .small {
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 calc(25% - 6px);
-    flex: 0 0 calc(25% - 6px);
+    width: calc(25% - 6px);
   }
 
   .large {
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 calc(50% - 4px);
-    flex: 0 0 calc(50% - 4px);
+    width: calc(50% - 4px);
   }
 
   /* ------ most loved & footer for tablet ------ */
